Fix button overlapping image on mobile

--- a/gardeners/static-assets/css/style.css
+++ b/gardeners/static-assets/css/style.css
@@ -1038,6 +1038,9 @@ Featured section style
     color:#444444;
 }
 
+.business_img_card {
+    padding-top: 20px;
+}
 
 /*
 work Section style
